welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:8: error: type mismatch;
 found   : Unit
 required: Int
      }else if (speed > 85){
            ^caughtSpeeding:19: error: type mismatch;
 found   : Unit
 required: Int
        if (speed >80){
        ^